Added Predictive modelling and problem statement

--- a/Report.ipynb
+++ b/Report.ipynb
@@ -11,6 +11,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Every year approximately 10,000 students apply for graduate schools abroad (United States, Canada, United Kingdom etc.) from different Indian institutes. [These](https://www.mbacrystalball.com/blog/2016/03/21/number-of-indian-students-in-usa-statistics-analysis/) [articles](https://in.usembassy.gov/u-s-hosts-million-international-students-second-consecutive-year/) clearly indicate an exponential rise in the number of Indian students abroad enrolled in undergraduate, graduate and doctoral programs. With such a monumental student population, one would expect an interpretable and coherent system to analyse graduate student intake, measures correlations between the different factors related to admissions, corroborate to the noise and entropy in the admission process, and predict the chances of admission into a given university. However, we could not find such a holistic system that addressed these issues.\n",
+    "\n",
+    "We therefore wanted to try and disentangle the process of graduate school admissions by analysing the various factors at stake, and apply our prior inductive biases about the randomness in the process to build predictive models. Our problem statement involves exploring and comprehending the following aspects of graduate school admissions:\n",
+    "- Studying patterns in student profiles applying to different graduate schools across geographic locations.\n",
+    "- Comparing, differentiating and gaining insights about the admission process.\n",
+    "- Inferring and leveraging definitive existing correlations.\n",
+    "- Drawing conclusions about admit/reject ratios, strength of an applicant profile, probability of admission, appropriate universities for a specific profile\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Data Collection"
    ]
   },
@@ -26,6 +39,143 @@
    "metadata": {},
    "source": [
     "## Predictive Modelling"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We performed our predictive modelling experiments on three major case studies:\n",
+    "- Carnegie Mellon University\n",
+    "- University of Illinois, Urbana Champaign\n",
+    "- University of California, Los Angeles\n",
+    "\n",
+    "### Classification\n",
+    "\n",
+    "As a first step, we consider the prediction problem as a deterministic binary classification problem. Our data cleaning and pre-processing steps have been explained above. For the binary classification task, we considered simple models so that we can interpret the results well. We also ensured that we could retrieve the importance of every factor so that a comprehensive analysis could be performed.\n",
+    "\n",
+    "We use the following classifiers:\n",
+    "- Logistic Regression\n",
+    "- Decision Tree\n",
+    "- Random Forest\n",
+    "- Gradient Boosting\n",
+    "- Support Vector Machine (SVM)\n",
+    "\n",
+    "A concise explanations of our results follows:\n",
+    "\n",
+    "- Carnegie Mellon University\n",
+    "\n",
+    "| Classifier | Logistic Regression | Decision Tree | Random Forest | Gradient Boosting | SVM |\n",
+    "| ------ | ------ | ------ | ------ | ------ | ------ |\n",
+    "| Accuracy | 0.72 | 0.65 | 0.7 | 0.67 | 0.75 |\n",
+    "| Precision (0) | 0.66 | 0.38 | 0 | 0.33 | 0.78 |\n",
+    "| Recall (0) | 0.27 | 0.29 | 0 | 0.13 | 0.3 |\n",
+    "| Precision (1) | 0.73 | 0.73 | 0.71 | 0.71 | 0.75 |\n",
+    "| Recall (1) | 0.93 | 0.81 | 1 | 0.89 | 0.96 |\n",
+    "\n",
+    "The average importance of features predicted by our classifier are depicted by the figure below.\n",
+    "\n",
+    "<p align=\"center\">\n",
+    "  <img width=\"400\" height=\"300\" src=\"images/cmu_feature_imp.png\">\n",
+    "</p>\n",
+    "\n",
+    "We can infer that the GPA factor takes utmost precedence when it comes to the admit decision. Two other important factors include the undergraduate major and GRE work experience. A slightly surprising that we notice is the low importance given to the numner of publications. A common notion is that publications play a vital role in getting admitted to any university, but our analysis shows otherwise. \n",
+    "\n",
+    "- University of Illinois, Urbana Champaign\n",
+    "\n",
+    "| Classifier | Logistic Regression | Decision Tree | Random Forest | Gradient Boosting | SVM |\n",
+    "| ------ | ------ | ------ | ------ | ------ | ------ |\n",
+    "| Accuracy | 0.74 | 0.844 | 0.726 | 0.87 | 0.75 |\n",
+    "| Precision (0) | 0.71 | 0.75 | 0 | 0.78 | 1 |\n",
+    "| Recall (0) | 0.09 | 0.66 | 0 | 0.74 | 0.1 |\n",
+    "| Precision (1) | 0.74 | 0.88 | 0.73 | 0.9 | 0.75 |\n",
+    "| Recall (1) | 0.99 | 0.92 | 1 | 0.92 | 1 |\n",
+    "\n",
+    "<p align=\"center\">\n",
+    "  <img width=\"400\" height=\"300\" src=\"images/uiuc_feature_imp.png\">\n",
+    "</p>\n",
+    "\n",
+    "We immediately see the huge spike in the importance of the work experience factor. This could be slightly counter-intuitive to our understanding of the admissions process, but we believe that these sorts of biases differ from college to college, and hence a uniform criterion cannot be applied. We also see that publications are an important factor for an admit to UIUC, clearly orthogonal to our results for CMU. \n",
+    "\n",
+    "- University of California, Los Angeles\n",
+    "\n",
+    "| Classifier | Logistic Regression | Decision Tree | Random Forest | Gradient Boosting | SVM |\n",
+    "| ------ | ------ | ------ | ------ | ------ | ------ |\n",
+    "| Accuracy | 0.73 | 0.76 | 0.77 | 0.75 | 0.74 |\n",
+    "| ROC Score | 0.51 | 0.66 | 0.58 | 0.65 | 0.53 |\n",
+    "| F1 Score | 0.63 | 0.75 | 0.71 | 0.74 | 0.66 |\n",
+    "\n",
+    "<p align=\"center\">\n",
+    "  <img width=\"400\" height=\"300\" src=\"images/ucla_feature_imp.png\">\n",
+    "</p>\n",
+    "\n",
+    "Here too, GPA takes the driver's seat when it comes to importance of factors. It outweighs every factor by almost a double margin, and this result might be slightly concerning to students with a low GPA but a strong profile otherwise. We also see that work experience is the second most important factor for getting an admit. Similar to the case of CMU, publications are not as important a factor as they are made out to be.\n",
+    "\n",
+    "\n",
+    "On the basis of the above classification experiments, we can state with some confidence that the different factors weigh distinctly for the admission criteria for different universities. Hence, students looking to target particular universities, cannot blindly follow a uniform 'gold standard' trajectory for getting an admit. Each university needs to be researched independently and a student must portray his/her profile to meet the specific requirements of each university.\n",
+    "\n",
+    "### Regression\n",
+    "\n",
+    "As a follow-up experiment, we wanted to explore the exact chance of admit as a function of the student profile. For this, we use the public [UCLA admission dataset](https://stats.idre.ucla.edu/stat/data/binary.csv) to perform a regression analysis. \n",
+    "\n",
+    "The data contains the following fields:\n",
+    "- <u>GRE scores</u>:\n",
+    "The GRE scores range from 260 to 340. The GRE scores were distributed as:\n",
+    "\n",
+    "<p align=\"center\">\n",
+    "  <img width=\"400\" height=\"300\" src=\"images/ucla_gre.png\">\n",
+    "</p>\n",
+    "\n",
+    "- <u>TOEFL scores</u>:\n",
+    "The TOEFL scores have a range of 0 to 120, however our dataset has aleast TOEFL score of 93. The TOEFL scores were distributed as:\n",
+    "\n",
+    "<p align=\"center\">\n",
+    "  <img width=\"400\" height=\"300\" src=\"images/ucla_toefl.png\">\n",
+    "</p>\n",
+    "\n",
+    "- <u>CGPA</u>:\n",
+    "The CGPA distribution of the candidates in the dataset is:\n",
+    "\n",
+    "<p align=\"center\">\n",
+    "  <img width=\"400\" height=\"300\" src=\"images/ucla_gpa.png\">\n",
+    "</p>\n",
+    "\n",
+    "- <u>University rating</u>:\n",
+    "This field gives the rating of the undergraduate university of the student on a relative scale of 1 to 5.\n",
+    "\n",
+    "- <u>SoP and LoR</u>:\n",
+    "These two fields give relative indicators about the strength of the candidate's statement of purpose and recommendations.\n",
+    "\n",
+    "- <u>Research</u>:\n",
+    "This is a binary attribute about the candidate's research experience. If the candidate has done research before it take a value of 1, else 0.\n",
+    "\n",
+    "We use the following regressors:\n",
+    "- Linear Regression\n",
+    "- Ridge Regression\n",
+    "- Lasso Regression\n",
+    "- Bayesian Ridge Regression\n",
+    "- AdaBoost Regression\n",
+    "- Gradient Boosting Regression\n",
+    "\n",
+    "The results we obtain are:\n",
+    "\n",
+    "| Regressor | Linear | Ridge | Lasso | Bayesian Ridge | Ada Boost | Gradient Boost |\n",
+    "| ------ | ------ | ------ | ------ | ------ | ------ | ------ |\n",
+    "| R2 score | 0.80 | 0.8 | 0.21 | 0.8 | 0.77 | 0.78 |\n",
+    "| RMSE | 0.005 | 0.005 | 0.02 | 0.005 | 0.006 | 0.006 |\n",
+    "| MAE | 0.05 | 0.05 | 0.12 | 0.05 | 0.06 | 0.05 |\n",
+    "\n",
+    "We analyse the correlations between the predicted and actual dependent variables to check the goodness of fit. The correlation plots obtained were:\n",
+    "\n",
+    "<p align=\"center\">\n",
+    "  <img width=\"400\" height=\"300\" src=\"images/ucla_corr.png\">\n",
+    "</p>\n",
+    "\n",
+    "<p align=\"right\">\n",
+    "  <img width=\"400\" height=\"300\" src=\"images/ucla_corr_.png\">\n",
+    "</p>\n",
+    "\n",
+    "Therefore, we purport that such a regression based predictive model can be used to extend the previously reported classification technique. We believe that such a combined representation of predictive models could be a viable option for mitigating the randomness in the grad school admissions process.  "
    ]
   },
   {
@@ -52,7 +202,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
