Adds data part of report

--- a/Report.ipynb
+++ b/Report.ipynb
@@ -24,7 +24,114 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data Collection"
+    "## Data Collection\n",
+    "### Source \n",
+    "We chose https://admits.fyi as a source to collect data from. The data (check below for description) is curated by a group of ex-grad students over the past few years. The data is checked manually to avoid any discrepancies. Key characteristics of the website are \n",
+    "- The website has rate limting and cannot be scraped directly because of the dynamic nature of the website. \n",
+    "- The website however allows us to set filters to search data that is relevant to us. \n",
+    "- The results are paginated so all data cannot be collected at once\n",
+    " \n",
+    "### Collection\n",
+    "To overcome all this we did the following for each university:\n",
+    "- Open up the website and set a filter to get data only for that particular university.\n",
+    "- Deploy Javascript that would click on the next page button\n",
+    "    - Next set of results would be loaded from their server only upon this click.\n",
+    "- We simulataneously start a network request capture mitmproxy that would allow us to snoop the requests made by the website on the server.\n",
+    "- We couldn't replay the same request again because of authentication that was implemented. So instead we captured all the responses sent by the server by saving the entire capture. \n",
+    "- Later we extracted the complete data of a university by analyzing the network capture and creating jsons. \n",
+    "- The jsons would then allow us to process data later.\n",
+    "\n",
+    "Another benefit of using this type of data collection was that we would even get fields not shown on the website.\n",
+    "\n",
+    "### Challenges\n",
+    "The website is made by ex-grad students from India. So it is robust and they tried to prevent automation to a large extent.\n",
+    "- We couldn't scrape all data directly because of the dynamic content.\n",
+    "- They implemented rate limiting from a given IP.\n",
+    "- The requests in the network capture couldn't be replayed because of server-client authentication implemented.\n",
+    "\n",
+    "The above solution we proposed is a semi automated method that overcomes all these challenges and gives us clean data to work with.\n",
+    "\n",
+    "\n",
+    "### Data Description\n",
+    "The data that we have is of the following format\n",
+    "\n",
+    "| **Field**             \t| **Value**                                   \t|\n",
+    "|-------------------\t|-----------------------------------------\t|\n",
+    "| **University**        \t| Name of the University                  \t|\n",
+    "| **Status**            \t| Boolean (Accept/Reject)q                \t|\n",
+    "| **Target Major**      \t| Major Applied For                       \t|\n",
+    "| **Term**              \t| Term Applied To (Fall'19/Spring'18/etc) \t|\n",
+    "| **GRE_Q**             \t| Quant Score in GRE (130 - 170)          \t|\n",
+    "| **GRE_V**             \t| Verbal Score in GRE (130 - 170)         \t|\n",
+    "| **GRE_AWA**           \t| Analytical Writing Score in GRE         \t|\n",
+    "| **GRE_Total**         \t| Total Score in GRE (Q + V)              \t|\n",
+    "| **TOEFL**             \t| TOEFL Score (0 - 120)                   \t|\n",
+    "| **TOEFL_Reading**     \t| TOEFL Score in Reading (0 - 30)         \t|\n",
+    "| **TOEFL_Listening**   \t| TOEFL Score in Listening (0 - 30)       \t|\n",
+    "| **TOEFL_Speaking**    \t| TOEFL Score in Speaking (0 - 30)        \t|\n",
+    "| **TOEFL_Writing**     \t| TOEFL Score in Writing (0 - 30)         \t|\n",
+    "| **IELTS**             \t| IELTS Score (0 - 9)                     \t|\n",
+    "| **College_Main_Form** \t| Name of Undergraduate College           \t|\n",
+    "| **Undergrad_Major**   \t| Undergraduate Major                     \t|\n",
+    "| **Grade**             \t| Undergraduate Grade (0-10/0-100/0-4)    \t|\n",
+    "| **Topper_Grade**      \t| Grade of Batch Topper                   \t|\n",
+    "| **Grade_Scale**       \t|  Scale of Grade (4/10/100)              \t|\n",
+    "| **Publications**      \t| Number of Research Papers Published     \t|\n",
+    "| **Work_Experience**   \t| Number of Months of Work Experience     \t|\n",
+    "\n",
+    "\n",
+    "\n",
+    "We collected data for 7 universities with each one having 3000 data points on average\n",
+    "- Carnegie Mellon University\n",
+    "- University of Illinois Urbana-Champaign\n",
+    "- University of California, Los Angeles\n",
+    "- Columbia University\n",
+    "- Georgia Institute of Technology\n",
+    "- University of Maryland, College Park\n",
+    "- University of Michigan, Ann Arbor\n",
+    "\n",
+    "A sample data point would like this \n",
+    "```json\n",
+    "        {\n",
+    "            \"University\": \"Carnegie Mellon University\",\n",
+    "            \"Status\": \"Admit\",\n",
+    "            \"Program\": \"MS\",\n",
+    "            \"Target_Major\": \"Software Engineering\",\n",
+    "            \"Specialization\": \"-1\",\n",
+    "            \"Term\": \"Fall\",\n",
+    "            \"Year\": \"2019\",\n",
+    "            \"GRE_Q\": 164,\n",
+    "            \"GRE_V\": 151,\n",
+    "            \"GRE_Total\": 315,\n",
+    "            \"GRE_AWA\": -1,\n",
+    "            \"TOEFL\": 111,\n",
+    "            \"IELTS\": -1,\n",
+    "            \"College_Main_Form\": \"B.M.S. College of Engineering, Bangalore\",\n",
+    "            \"Undergrad_Major\": \"Computer Science\",\n",
+    "            \"Grade\": 8.8,\n",
+    "            \"Topper_Grade\": -1,\n",
+    "            \"Grade_Scale\": 10,\n",
+    "            \"Publications\": 1,\n",
+    "            \"Work_Experience\": 18,\n",
+    "            \"TOEFL_Reading\": -1,\n",
+    "            \"TOEFL_Listening\": -1,\n",
+    "            \"TOEFL_Speaking\": -1,\n",
+    "            \"TOEFL_Writing\": -1\n",
+    "}```\n",
+    "\n",
+    "\n",
+    "### Preprocessing\n",
+    "1. Removed features which either had more than 60% missing data and or were redundant based on correleation matrix. The features removed were\n",
+    "    - Topper Grade (Missing Data)\n",
+    "    - TOEFL R/L/S/W (Redundant)\n",
+    "    - Grade Scale (Irrelevant)\n",
+    "    - University Applied To (Same across all fields)\n",
+    "<p align=\"center\">\n",
+    "  <img width=\"400\" height=\"300\" src=\"images/uiuc_feature_imp.png\">\n",
+    "</p>\n",
+    "2. Feature Coalescing\n",
+    "    - We normalized the grades across different scales. Grade / Grade Scale\n",
+    "3. Columns with non numeric data were cateogorized using label encoding."
    ]
   },
   {
@@ -202,7 +309,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
