--- a/Report.ipynb
+++ b/Report.ipynb
@@ -127,7 +127,7 @@
     "    - Grade Scale (Irrelevant)\n",
     "    - University Applied To (Same across all fields)\n",
     "<p align=\"center\">\n",
-    "  <img width=\"400\" height=\"300\" src=\"images/uiuc_feature_imp.png\">\n",
+    "  <img width=\"400\" height=\"300\" src=\"images/cmu_correlation_matrix.png\">\n",
     "</p>\n",
     "2. Feature Coalescing\n",
     "    - We normalized the grades across different scales. Grade / Grade Scale\n",
