--- a/Report.ipynb
+++ b/Report.ipynb
@@ -138,7 +138,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Analysis"
+    "## Data Insights"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After pre-processing the data, CMU, UIUC and UCLA data were studied and the following details were derived through various plots.\n",
+    "\n",
+    "### CMU\n",
+    "- Data size after processing = (1174, 18)\n",
+    "- Ratio of students admitted = 32%\n",
+    "<p align=\"center\">\n",
+    "  <img width=\"400\" height=\"300\" src=\"images/avsr_CMU.png\">\n",
+    "</p>\n",
+    "- Accept vs reject analysis showed that GRE, Normalized Grades, Publications, Work Ex most important for securing admission\n",
+    "<p align=\"center\">\n",
+    "  <img width=\"400\" height=\"300\" src=\"images/CMUavsr.png\">\n",
+    "</p>\n",
+    "\n",
+    "### UIUC\n",
+    "- Data size after processing = (1056, 16)\n",
+    "- Ratio of students admitted = 23%\n",
+    "<p align=\"center\">\n",
+    "  <img width=\"400\" height=\"300\" src=\"images/avsr_UIUC.png\">\n",
+    "</p>\n",
+    "- Correlation matrix revealed correlations between GRE total & GRE verbal, GRE total & GRE quant and GRE total & GRE verbal & TOEFL. This reveals that TOEFL tests verbal skills over quantitative. In addition, the correlation between undergraduate major and target major showed that applicants mostly stick to the same area while applying\n",
+    "- The accept vs reject analysis showed that GRE/TOEFL, with similar mean and stdev, does not play a huge role in admission\n",
+    "<p align=\"center\">\n",
+    "  <img width=\"400\" height=\"300\" src=\"images/uiucavsr.png\">\n",
+    "</p>\n",
+    "- Grades, on the other hand show a significant difference in accepted and rejected groups which means grades play a role in admission\n",
+    "- Although work experience is similar in both groups, publications are slightly higher for admitted students\n",
+    "\n",
+    "\n",
+    "### UCLA\n",
+    "- Data size after processing = (1583, 15)\n",
+    "- Ratio of students admitted = 27%\n",
+    "<p align=\"center\">\n",
+    "  <img width=\"400\" height=\"300\" src=\"images/avsr_UCLA.png\">\n",
+    "</p>\n",
+    "- Correlation matrix revealed that grade and GRE scores, publications and GRE scores do not correlate, whereas GRE Total, Verbal and TOEFL had high correlation and infact work experience hampers the performance in GRE and TOEFL\n",
+    "- Accept vs Reject performance showed that grade plays a very important role in deciding the admission whereas, TOEFL and GRE scores are not very important and an average score works"
    ]
   },
   {
@@ -289,6 +331,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Comparative Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Comparing the data and analysis from across different colleges, we can infer the following comparisons,\n",
+    "1. Importance of GRE and TOEFL\n",
+    "    * TOEFL is not a deciding factor and is just a bar/baseline/threshold\n",
+    "    * Most colleges have a specific GRE threshold where the freq of applicants is max\n",
+    "2. Difficulty levels\n",
+    "    * CMU is relatively harder to get admitted to as compared to other universities\n",
+    "    * UCLA pays lesser attention to Work Experience and Publication compared to other universities\n",
+    "3. Model Performance\n",
+    "    * F1 & ROC score needs to be analysed rather than accuracy to incorporate for data imbalance\n",
+    "4. Important features\n",
+    "    * Grade is one of the most important factor across all colleges\n",
+    "    * Work Experience matters in most of the colleges but not all"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Conclusions"
    ]
   }
@@ -309,7 +376,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
