Adds conclusion for report

--- a/Report.ipynb
+++ b/Report.ipynb
@@ -356,8 +356,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Conclusions"
+    "## Conclusions\n",
+    "We perform detailed analysis of grad school admit results for Indian Students. We started off by collecting high quality data from https://admits.fyi. After preprocessing the data, we selected 3 of the most competitive schools and analyzed how various factors such as Undergraduate GPA, GRE, Publications affect an admission result. We found that  undergraduate GPA is one of the most important factor and seems to be consistent across all the three universities we selected. GRE score though important doesn't seem to be a deciding factor for admission. Students with similar GRE scores have got different results when applying to the same program. TOEFL score does not affect your admission result in these top places. This result is consistent with the fact that it is only used as a language requirement for Indian Students. We also find that UCLA plays lesser attention to Work Experience and Publications. However, one shortcoming of our analysis is that we cannot take into account subjective factors like the strength of a student's LoR's or how well written an SoP is. These also play a crucial role in admission but cannot be modelled directly. \n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -376,7 +385,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
