Changes image format

--- a/Report.ipynb
+++ b/Report.ipynb
@@ -126,9 +126,9 @@
     "    - TOEFL R/L/S/W (Redundant)\n",
     "    - Grade Scale (Irrelevant)\n",
     "    - University Applied To (Same across all fields)\n",
-    "<p align=\"center\">\n",
-    "  <img width=\"400\" height=\"300\" src=\"images/cmu_correlation_matrix.png\">\n",
-    "</p>\n",
+    "    \n",
+    "![Correlation Features](images/cmu_correlation_matrix.png)\n",
+    "\n",
     "2. Feature Coalescing\n",
     "    - We normalized the grades across different scales. Grade / Grade Scale\n",
     "3. Columns with non numeric data were cateogorized using label encoding."
@@ -150,25 +150,24 @@
     "### CMU\n",
     "- Data size after processing = (1174, 18)\n",
     "- Ratio of students admitted = 32%\n",
-    "<p align=\"center\">\n",
-    "  <img width=\"400\" height=\"300\" src=\"images/avsr_CMU.png\">\n",
-    "</p>\n",
+    "\n",
+    "![](images/avsr_CMU.png)\n",
+    "\n",
     "- Accept vs reject analysis showed that GRE, Normalized Grades, Publications, Work Ex most important for securing admission\n",
-    "<p align=\"center\">\n",
-    "  <img width=\"400\" height=\"300\" src=\"images/CMUavsr.png\">\n",
-    "</p>\n",
+    "\n",
+    "![](images/CMUavsr.png)\n",
     "\n",
     "### UIUC\n",
     "- Data size after processing = (1056, 16)\n",
     "- Ratio of students admitted = 23%\n",
-    "<p align=\"center\">\n",
-    "  <img width=\"400\" height=\"300\" src=\"images/avsr_UIUC.png\">\n",
-    "</p>\n",
+    "\n",
+    "![](images/avsr_UIUC.png)\n",
+    "\n",
     "- Correlation matrix revealed correlations between GRE total & GRE verbal, GRE total & GRE quant and GRE total & GRE verbal & TOEFL. This reveals that TOEFL tests verbal skills over quantitative. In addition, the correlation between undergraduate major and target major showed that applicants mostly stick to the same area while applying\n",
     "- The accept vs reject analysis showed that GRE/TOEFL, with similar mean and stdev, does not play a huge role in admission\n",
-    "<p align=\"center\">\n",
-    "  <img width=\"400\" height=\"300\" src=\"images/uiucavsr.png\">\n",
-    "</p>\n",
+    "\n",
+    "![](images/uiucavsr.png)\n",
+    "\n",
     "- Grades, on the other hand show a significant difference in accepted and rejected groups which means grades play a role in admission\n",
     "- Although work experience is similar in both groups, publications are slightly higher for admitted students\n",
     "\n",
@@ -176,9 +175,9 @@
     "### UCLA\n",
     "- Data size after processing = (1583, 15)\n",
     "- Ratio of students admitted = 27%\n",
-    "<p align=\"center\">\n",
-    "  <img width=\"400\" height=\"300\" src=\"images/avsr_UCLA.png\">\n",
-    "</p>\n",
+    "\n",
+    "![](images/avsr_UCLA.png)\n",
+    "\n",
     "- Correlation matrix revealed that grade and GRE scores, publications and GRE scores do not correlate, whereas GRE Total, Verbal and TOEFL had high correlation and infact work experience hampers the performance in GRE and TOEFL\n",
     "- Accept vs Reject performance showed that grade plays a very important role in deciding the admission whereas, TOEFL and GRE scores are not very important and an average score works"
    ]
@@ -224,9 +223,7 @@
     "\n",
     "The average importance of features predicted by our classifier are depicted by the figure below.\n",
     "\n",
-    "<p align=\"center\">\n",
-    "  <img width=\"400\" height=\"300\" src=\"images/cmu_feature_imp.png\">\n",
-    "</p>\n",
+    "![](images/cmu_feature_imp.png)\n",
     "\n",
     "We can infer that the GPA factor takes utmost precedence when it comes to the admit decision. Two other important factors include the undergraduate major and GRE work experience. A slightly surprising that we notice is the low importance given to the numner of publications. A common notion is that publications play a vital role in getting admitted to any university, but our analysis shows otherwise. \n",
     "\n",
@@ -240,9 +237,7 @@
     "| Precision (1) | 0.74 | 0.88 | 0.73 | 0.9 | 0.75 |\n",
     "| Recall (1) | 0.99 | 0.92 | 1 | 0.92 | 1 |\n",
     "\n",
-    "<p align=\"center\">\n",
-    "  <img width=\"400\" height=\"300\" src=\"images/uiuc_feature_imp.png\">\n",
-    "</p>\n",
+    "![](images/uiuc_feature_imp.png)\n",
     "\n",
     "We immediately see the huge spike in the importance of the work experience factor. This could be slightly counter-intuitive to our understanding of the admissions process, but we believe that these sorts of biases differ from college to college, and hence a uniform criterion cannot be applied. We also see that publications are an important factor for an admit to UIUC, clearly orthogonal to our results for CMU. \n",
     "\n",
@@ -254,9 +249,7 @@
     "| ROC Score | 0.51 | 0.66 | 0.58 | 0.65 | 0.53 |\n",
     "| F1 Score | 0.63 | 0.75 | 0.71 | 0.74 | 0.66 |\n",
     "\n",
-    "<p align=\"center\">\n",
-    "  <img width=\"400\" height=\"300\" src=\"images/ucla_feature_imp.png\">\n",
-    "</p>\n",
+    "![](images/ucla_feature_imp.png)\n",
     "\n",
     "Here too, GPA takes the driver's seat when it comes to importance of factors. It outweighs every factor by almost a double margin, and this result might be slightly concerning to students with a low GPA but a strong profile otherwise. We also see that work experience is the second most important factor for getting an admit. Similar to the case of CMU, publications are not as important a factor as they are made out to be.\n",
     "\n",
@@ -271,23 +264,17 @@
     "- <u>GRE scores</u>:\n",
     "The GRE scores range from 260 to 340. The GRE scores were distributed as:\n",
     "\n",
-    "<p align=\"center\">\n",
-    "  <img width=\"400\" height=\"300\" src=\"images/ucla_gre.png\">\n",
-    "</p>\n",
+    "![](images/ucla_gre.png)\n",
     "\n",
     "- <u>TOEFL scores</u>:\n",
     "The TOEFL scores have a range of 0 to 120, however our dataset has aleast TOEFL score of 93. The TOEFL scores were distributed as:\n",
     "\n",
-    "<p align=\"center\">\n",
-    "  <img width=\"400\" height=\"300\" src=\"images/ucla_toefl.png\">\n",
-    "</p>\n",
+    "![](images/ucla_toefl.png)\n",
     "\n",
     "- <u>CGPA</u>:\n",
     "The CGPA distribution of the candidates in the dataset is:\n",
     "\n",
-    "<p align=\"center\">\n",
-    "  <img width=\"400\" height=\"300\" src=\"images/ucla_gpa.png\">\n",
-    "</p>\n",
+    "![](images/ucla_gpa.png)\n",
     "\n",
     "- <u>University rating</u>:\n",
     "This field gives the rating of the undergraduate university of the student on a relative scale of 1 to 5.\n",
@@ -316,13 +303,10 @@
     "\n",
     "We analyse the correlations between the predicted and actual dependent variables to check the goodness of fit. The correlation plots obtained were:\n",
     "\n",
-    "<p align=\"center\">\n",
-    "  <img width=\"400\" height=\"300\" src=\"images/ucla_corr.png\">\n",
-    "</p>\n",
+    "![](images/ucla_corr.png)\n",
     "\n",
-    "<p align=\"right\">\n",
-    "  <img width=\"400\" height=\"300\" src=\"images/ucla_corr_.png\">\n",
-    "</p>\n",
+    "\n",
+    "![](images/ucla_corr_.png)\n",
     "\n",
     "Therefore, we purport that such a regression based predictive model can be used to extend the previously reported classification technique. We believe that such a combined representation of predictive models could be a viable option for mitigating the randomness in the grad school admissions process.  "
    ]
@@ -360,13 +344,6 @@
     "We perform detailed analysis of grad school admit results for Indian Students. We started off by collecting high quality data from https://admits.fyi. After preprocessing the data, we selected 3 of the most competitive schools and analyzed how various factors such as Undergraduate GPA, GRE, Publications affect an admission result. We found that  undergraduate GPA is one of the most important factor and seems to be consistent across all the three universities we selected. GRE score though important doesn't seem to be a deciding factor for admission. Students with similar GRE scores have got different results when applying to the same program. TOEFL score does not affect your admission result in these top places. This result is consistent with the fact that it is only used as a language requirement for Indian Students. We also find that UCLA plays lesser attention to Work Experience and Publications. However, one shortcoming of our analysis is that we cannot take into account subjective factors like the strength of a student's LoR's or how well written an SoP is. These also play a crucial role in admission but cannot be modelled directly. \n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
